# memcached

./: .gitignore  setup.sh
cache/: CMakeLists.txt
cache/bench/: nohup.out  parse_tracker.py  run_bench.sh  run_scale_bench.sh  run_tracker.sh  run_two_cache_bench.sh
cache/cache/: CMakeLists.txt
cache/cache/src/: main.cpp
cache/client/: CMakeLists.txt
cache/client/bench/: adaptive.cpp  dataset.cpp  invalidate.cpp  oracle.cpp  sketches.cpp  stale.cpp  ttl.cpp  update.cpp  zipf.hpp
cache/client/include/: benchmark.hpp  parser.hpp  thread_pool.hpp  workload.hpp  zipf.hpp
cache/client/src/: cache_client.cpp  client.cpp  client.hpp  db_client.cpp  load_tracker.cpp  load_tracker.hpp  main.cpp  policy.cpp  policy.hpp
cache/plot/: latency_vs_throughput.py  test.py
cache/proto/: CMakeLists.txt
cache/proto/myproto/: cache_service.proto
